--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,23 +1,35 @@
 [package]
 name = "tor-v3-vanity"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Aiden McClelland <me@drbonez.dev>"]
-edition = "2018"
-description = "A TOR v3 vanity url generator designed to run on an nvidia GPU."
+edition = "2021"
+description = "A TOR v3 vanity url generator with GUI, designed to run on an NVIDIA GPU."
 license = "MIT"
-repository = "https://github.com/dr-bonez/tor-v3-vanity"
+repository = "https://github.com/Mxrider420z/tor-v3-vanity"
 documentation = "http://docs.rs/tor-v3-vanity"
 readme = "README.md"
-keywords = ["tor", "v3", "vanity", "gpu", "cuda"]
-include = ["src/**/*", "Cargo.toml", "core/**/*", "build.rs", "README.md", "LICENSE", "foo/bar"]
+keywords = ["tor", "v3", "vanity", "gpu", "cuda", "gui"]
+include = ["src/**/*", "Cargo.toml", "core/**/*", "build.rs", "README.md", "LICENSE"]
 
+# CLI binary
 [[bin]]
 name = "t3v"
 test = false
 bench = false
 path = "src/main.rs"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+# GUI binary
+[[bin]]
+name = "t3v-gui"
+test = false
+bench = false
+path = "src/gui.rs"
+required-features = ["gui"]
+
+[features]
+default = ["gui"]
+gui = ["eframe", "rfd", "dirs"]
+cli-only = []
 
 [dependencies]
 base32 = "0.4.0"
@@ -32,5 +44,20 @@ rustacuda = "0.1.2"
 sha3 = "0.9.1"
 tor-v3-vanity-core = { version = "0.1.0", path = "./core" }
 
+# GUI dependencies (optional)
+eframe = { version = "0.24", optional = true }
+rfd = { version = "0.12", optional = true }
+dirs = { version = "5.0", optional = true }
+
 [build-dependencies]
 ptx-builder = "0.5"
+
+# Cross-compilation profiles
+[profile.release]
+lto = true
+strip = true
+opt-level = 3
+
+[profile.release-windows]
+inherits = "release"
+# For Windows cross-compilation from Linux
