--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -18,9 +18,6 @@ cuda = ["tor-v3-vanity/cuda"]
 eframe = "0.29"
 egui = "0.29"
 
-# File dialogs
-rfd = "0.15"
-
 # Core library
 tor-v3-vanity = { path = "..", default-features = false }
 
@@ -42,6 +39,10 @@ open = "5"
 # Base32 for validation
 base32 = "0.5"
 
+# File dialogs (Windows only)
+[target.'cfg(windows)'.dependencies]
+rfd = "0.15"
+
 [target.'cfg(windows)'.build-dependencies]
 winres = "0.1"
 
@@ -49,7 +50,3 @@ winres = "0.1"
 lto = true
 strip = true
 opt-level = 3
-
-# Static CRT on Windows for portable exe
-[target.x86_64-pc-windows-msvc]
-rustflags = ["-C", "target-feature=+crt-static"]
