--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ base32 = "0.5"
 chrono = "0.4"
 clap = { version = "4", features = ["derive"] }
 crossbeam-channel = "0.5"
+curve25519-dalek = "4"
 ed25519-dalek = { version = "2", features = ["rand_core", "hazmat"] }
 num_cpus = "1.16"
 rand = "0.8"
