--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ ed25519-dalek = { version = "2", features = ["rand_core", "hazmat"] }
 num_cpus = "1.16"
 rand = "0.8"
 rayon = "1.10"
+sha2 = "0.10"
 sha3 = "0.10"
 thiserror = "1.0"
 ctrlc = "3.4"
